packages/typ/tests/fixtures/diagnostics/0603_functor_call_abstract_function_bool_06.ml.infer.expected
File "0603_functor_call_abstract_function_bool_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0603_functor_call_abstract_function_bool_06 is not a valid module name.

File "0603_functor_call_abstract_function_bool_06.ml", line 7, characters 15-19:
7 |   let y = X.id true
                   ^^^^
Error: The constructor true has type bool
       but an expression was expected of type X.t
