packages/typ/tests/fixtures/diagnostics/0603_functor_call_abstract_function_bool_06.ml
module type Arg_zeta = sig
  type t
  val id : t -> t
end

module Make_zeta (X : Arg_zeta) = struct
  let y = X.id true
end
